k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: planning-poker
  labels:
    app: planning-poker
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: planning-poker
